[package]
name = "arp-parse"
version = "0.1.0"
edition = "2021"
authors = ["FENG Yingcai <fengyc.work@gmail.com>"]
license = "MIT"
description = "ARP parsing and building library"
repository = "https://github.com/fengyc/arp-parse-rs/"
documentation = "https://docs.rs/arp-parse/"
readme = "README.md"
keywords = ["arp"]
categories = ["network-programming", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
